--- a/main.tex
+++ b/main.tex
@@ -33,9 +33,11 @@
 A pseudo-potential system for recreating an sp\(^{2}\) carbon atom is built 
 and tested as a building block for various pseudo-hydrocarbon chain and ring systems.  
 This pseudo-system has a central charge of 1, thus it contains only one
-electron. It is employed in \textsl{ab-initio} calculations in which several physical characterstics
-including first ionisation and excitation energies, as well as the HOMO energy, 
-are found to be well-reproduced by the pseudo-system.
+electron. It is employed in \textsl{ab-initio} calculations 
+on small hydrocarbons to polycyclic aromatic hydrocarbons.
+The relative errors obtained with the PBE0 functional range from
+0.01\% on TD-DFT first excitation energy to 10\% on ionisation
+energy.
 \end{abstract}
 \maketitle
 %\begin{wileykeywords}
@@ -51,15 +53,17 @@ are found to be well-reproduced by the pseudo-system.
 \fbox{
 \begin{minipage}{1.0\textwidth}
 %\includegraphics[width=50mm,height=50mm]{cc.eps} % Pick only one of the two styles by uncommenting the corresponding \includegraphics
-\includegraphics[width=50mm,height=50mm]{ring_pbe0_tddft}
+\includegraphics[width=50mm]{ring_pbe0_tddft}
 %\includegraphics[width=110mm,height=20mm]{ring_pbe0_tddft}
 \\
-A pseudo-potential system for recreating an sp\(^{2}\) carbon atom is built
-and tested as a building block for various pseudo-hydrocarbon chain and ring systems.
+A pseudo-potential system for recreating an sp\(^{2}\) carbon atom is built 
+and tested as a building block for various pseudo-hydrocarbon chain and ring systems.  
 This pseudo-system has a central charge of 1, thus it contains only one
-electron. It is employed in \textsl{ab-initio} calculations in which several physical characterstics
-including 1\textsuperscript{st} ionisation and excitation energies, as well as the HOMO energy,
-are found to be well-reproduced by the pseudo-system.
+electron. It is employed in \textsl{ab-initio} calculations 
+on small hydrocarbons to polycyclic aromatic hydrocarbons.
+The relative errors obtained with the PBE0 functional range from
+0.01\% on TD-DFT first excitation energy to 10\% on ionisation
+energy.
 \end{minipage}
 }}
 \end{figure}
